<resources>
    <string name="app_name">ShoppingList</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="add_item">Add Item</string>
    <string name="delete_list">Delete List</string>
    <string name="already_purchased">Already Purchased</string>
    <string name="add_item1">Add Item</string>
    <string name="item_description">Item Description</string>
    <string name="estimated_price">Estimated Price</string>
    <string name="place_type">Place type:</string>
    <string name="item_name">Item name</string>
    <string name="create_item_activity">Create Item</string>
    <string name="item">Item</string>
    <string name="cost">Cost</string>
    <string name="purchased">Purchased</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="description">Description</string>
    <string name="item_added">Item added!</string>
    <string name="updated_item">Item updated!</string>
    <string name="cancelled">Cancelled</string>
    <string name="action_hide">Hide</string>
    <string name="total">Total: %1$d</string>
</resources>
