<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:padding="30dp"
    tools:context="hu.ait.android.shoppinglist.CreateItemActivity">

    <EditText
        android:id="@+id/etItemName"
        android:hint="@string/item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/place_type"
        android:id="@+id/placeType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etItemName"/>

    <Spinner
        android:id="@+id/spinnerItemType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/placeType"/>

    <EditText
        android:id="@+id/etEstimatedPrice"
        android:hint="@string/estimated_price"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinnerItemType"/>

    <EditText
        android:id="@+id/etItemDescription"
        android:hint="@string/item_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etEstimatedPrice"/>

    <CheckBox
        android:id="@+id/cbItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etItemDescription"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_purchased"
        android:layout_alignBaseline="@+id/cbItem"
        android:layout_alignBottom="@+id/cbItem"
        android:layout_toRightOf="@+id/cbItem"
        android:layout_toEndOf="@+id/cbItem" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cbItem"
        android:text="@string/add_item1"
        android:id="@+id/btnAddItem"/>




</RelativeLayout>
