<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="10dp"
    card_view:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivIcon"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_margin="10dp"
            android:scaleType="fitXY"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/tvItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/ivIcon"
            android:layout_toRightOf="@+id/ivIcon"
            android:text="@string/item"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvCost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvItem"
            android:layout_toEndOf="@+id/ivIcon"
            android:layout_toRightOf="@+id/ivIcon"
            android:text="@string/cost"
            android:textColor="#000000"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/cbItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/ivIcon"
            android:layout_toRightOf="@+id/ivIcon"
            android:layout_below="@+id/tvDescription" />


        <TextView
            android:id="@+id/tvPurchased"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/cbItem"
            android:layout_alignBottom="@+id/cbItem"
            android:layout_toEndOf="@+id/cbItem"
            android:layout_toRightOf="@+id/cbItem"
            android:text="@string/purchased"
            android:textColor="#000000"
            android:textSize="16sp" />


        <Button
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/delete" />

        <Button
            android:id="@+id/btnEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/tvDescription"
            android:text="@string/edit" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvCost"
            android:layout_toEndOf="@+id/ivIcon"
            android:layout_toRightOf="@+id/ivIcon"
            android:text="@string/description"
            android:textColor="#000000"
            android:textSize="16sp" />


    </RelativeLayout>

</android.support.v7.widget.CardView>